Fix layout issues with toasts, error handling and admin panel

--- a/static/css/admin.css
+++ b/static/css/admin.css
@@ -58,6 +58,7 @@
     color: var(--text-secondary-color) !important;
 }
 
-.original p {
+.original p, .help, #id_password p:first-of-type {
     display: none;
 }
+
