--- a/static/css/base.css
+++ b/static/css/base.css
@@ -969,7 +969,6 @@ option[data-stock="0"] {
 }
 
 .toast-body {
-    display: inline;
     padding: 0.5rem 1rem; 
 }
 
